--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover,maximum-scale=5">
         <link href="https://media.bio.site/biosite/biosite.css" rel="stylesheet">
     </head>
-    <title data-react-helmet="true">- Roblox Condo NSFW🔞 — Bio Sites</title>
+    <title data-react-helmet="true">- Roblox Condo NSFW -🔞 — Bio Sites</title>
     <meta data-react-helmet="true" charset="UTF-8">
     <meta data-react-helmet="true" name="description" content="Create a free link in bio with Bio Sites by Squarespace. Showcase your links, earn money, and grow your brand online, all with one link.">
     <meta data-react-helmet="true" property="og:type" content="website">
@@ -85,7 +85,7 @@
                         </header>
                         <section class="BioSite-components-BodySections-Socials-Socials__socials--vRiFp">
                             <div data-cy="biosite-social" data-social-type="discord" role="link" aria-label="discord Social Link" class="BioSite-components-BodySections-Socials-Socials__social--qY63i">
-                                <a href="https://discord.gg/QmGr5JFeQb" target="_blank" rel="noopener noreferrer" class="BioSite-components-BodySections-Socials-Socials__social--qY63i BioSite-components-BodySections-Socials-Socials__discord--eMsOq" aria-label="">
+                                <a href="https://discord.gg/WJcFGp66An" target="_blank" rel="noopener noreferrer" class="BioSite-components-BodySections-Socials-Socials__social--qY63i BioSite-components-BodySections-Socials-Socials__discord--eMsOq" aria-label="">
                                     <svg width="20" height="20" viewBox="0 0 20 20" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M15.0909 6.27273C15.0909 6.27273 13.6317 5.13045 11.9091 5L11.7538 5.31086C13.311 5.69236 14.0256 6.23773 14.7727 6.90909C13.485 6.25173 12.2145 5.63636 10 5.63636C7.78545 5.63636 6.51495 6.25173 5.22727 6.90909C5.97436 6.23773 6.82455 5.63127 8.24618 5.31086L8.09091 5C6.28364 5.17023 4.90909 6.27273 4.90909 6.27273C4.90909 6.27273 3.27968 8.63555 3 13.2727C4.64182 15.1669 7.13636 15.1818 7.13636 15.1818L7.65818 14.4869C6.77236 14.1789 5.77327 13.6294 4.90909 12.6364C5.93936 13.4159 7.49432 14.2273 10 14.2273C12.5057 14.2273 14.0606 13.4159 15.0909 12.6364C14.227 13.6294 13.228 14.1789 12.3418 14.4869L12.8636 15.1818C12.8636 15.1818 15.3582 15.1669 17 13.2727C16.7203 8.63555 15.0909 6.27273 15.0909 6.27273ZM7.93182 12C7.31645 12 6.81818 11.4305 6.81818 10.7273C6.81818 10.0241 7.31645 9.45455 7.93182 9.45455C8.54718 9.45455 9.04545 10.0241 9.04545 10.7273C9.04545 11.4305 8.54718 12 7.93182 12ZM12.0682 12C11.4528 12 10.9545 11.4305 10.9545 10.7273C10.9545 10.0241 11.4528 9.45455 12.0682 9.45455C12.6835 9.45455 13.1818 10.0241 13.1818 10.7273C13.1818 11.4305 12.6835 12 12.0682 12Z" fill="currentColor"></path>
                                     </svg>
@@ -261,7 +261,7 @@
             },
             "metadata": {
                 "url": "https:\u002F\u002Fbio.site\u002FAshentearsrblx.com",
-                "handle": "Ashentearsrblx.com",
+                "handle": "JerwinProfits.com",
                 "version": "",
                 "template": "0",
                 "visibility": "public",
